--- a/.github/workflows/update_formula.yml
+++ b/.github/workflows/update_formula.yml
@@ -18,46 +18,18 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests
+          pip install requests hashlib
 
-      - name: Get the latest release info
+      - name: Update formula
         id: release_info
         run: |
-          import requests
-          import os
-
-          repo = "harleymckenzie/asc"
-          response = requests.get(f"https://api.github.com/repos/{repo}/releases/latest")
-          response.raise_for_status()
-          data = response.json()
-
-          download_url = data["tarball_url"]
-          tag_name = data["tag_name"]
-
-          os.system(f"echo ::set-output name=download_url::{download_url}")
-          os.system(f"echo ::set-output name=tag_name::{tag_name}")
-        shell: python
-
-      - name: Download the release archive
-        run: |
-          curl -L ${{ steps.release_info.outputs.download_url }} -o release.tar.gz
-
-      - name: Calculate the SHA256 sum
-        id: sha256sum
-        run: |
-          echo "SHA256_SUM=$(sha256sum release.tar.gz | awk '{print $1}')" >> $GITHUB_ENV
-
-      - name: Update the Homebrew formula
-        run: |
-          # Update the main package URL
-          sed -i "/homepage \".*\"/!b;n;c\  url \"${{ steps.release_info.outputs.download_url }}\"" Formula/asc.rb
-          # Update the main package SHA256
-          sed -i "/url \".*\"/!b;n;c\  sha256 \"${{ env.SHA256_SUM }}\"" Formula/asc.rb
+          python update_formula.py
+          echo ::set-output name=tag_name::$(python -c "import json; print(json.load(open('release_info.json'))['tag_name'])")
         
       - name: Commit and push changes
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add Formula/asc.rb
-          git commit -m "Update formula for ${{ steps.release_info.outputs.tag_name }}"
+          git commit -m "Update formula to ${{ env.VERSION }}"
           git push
