--- a/.github/workflows/update_formula.yml
+++ b/.github/workflows/update_formula.yml
@@ -18,18 +18,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests hashlib
 
       - name: Update formula
-        id: release_info
-        run: |
-          python update_formula.py
-          echo ::set-output name=tag_name::$(python -c "import json; print(json.load(open('release_info.json'))['tag_name'])")
-        
+        run: python update-formula.py
+
       - name: Commit and push changes
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add Formula/asc.rb
-          git commit -m "Update formula to ${{ env.VERSION }}"
+          git commit -m "Update Formula/asc.rb"
           git push
